Add Lambert formulation into capillary models.

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -656,3 +656,14 @@ Thanks.
 	pages={465-469},
 	language={English}
 }
+
+@article{Lambert2008,
+	title={Comparison between two capillary forces models},
+	author={Lambert, Pierre and Chau, Alexandre and Delchambre, Alain and R{\'e}gnier, St{\'e}phane},
+	journal={Langmuir},
+	volume={24},
+	number={7},
+	pages={3157--3163},
+	year={2008},
+	publisher={ACS Publications}
+}
