Implement Soulie capillary model.

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -667,3 +667,18 @@ Thanks.
 	year={2008},
 	publisher={ACS Publications}
 }
+
+@article {Soulie2006,
+	author = {Soulié, F. and Cherblanc, F. and El Youssoufi, M.S. and Saix, C.},
+	title = {Influence of liquid bridges on the mechanical behaviour of polydisperse granular materials},
+	journal = {International Journal for Numerical and Analytical Methods in Geomechanics},
+	volume = {30},
+	number = {3},
+	publisher = {John Wiley & Sons, Ltd.},
+	issn = {1096-9853},
+	url = {http://dx.doi.org/10.1002/nag.476},
+	doi = {10.1002/nag.476},
+	pages = {213--228},
+	keywords = {liquid bridge, polydisperse, cohesion, capillary force, humid granular media, DEM simulation},
+	year = {2006},
+}
