update biblio references

--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -20,14 +20,17 @@
 	author = {Boon,C.W. and Houlsby, G.T. and Utili, S.}
 }
 
-@Article{Catalano2013a,
+@Article{Catalano2014a,
 	title = {Pore-scale modeling of fluid-particles interaction and emerging poromechanical effects},
 	author = {Catalano, E. and Chareyre, B. and Barthélémy, E.},
 	journal = {International Journal for Numerical and Analytical Methods in Geomechanics},
-	year = {2013},
+	year = {2014},
+	volume = {38},
+	number = {1},
+	pages = {51--71},
 	doi = {10.1002/nag.2198},
-	note = {in press, arxiv version available},
-	url = {http://arxiv.org/pdf/1304.4895.pdf}
+	note = {http://arxiv.org/pdf/1304.4895.pdf},
+	url = {http://dx.doi.org/10.1002/nag.2198}
 }
 
 @article{Chareyre2012a,
