fixed some errors and warnings for documentation build

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -659,7 +659,7 @@ Thanks.
 
 @article{Lambert2008,
 	title={Comparison between two capillary forces models},
-	author={Lambert, Pierre and Chau, Alexandre and Delchambre, Alain and R{\'e}gnier, St{\'e}phane},
+	author={Lambert, Pierre and Chau, Alexandre and Delchambre, Alain and Régnier, Stéphane},
 	journal={Langmuir},
 	volume={24},
 	number={7},
