--- a/doc/yade-articles.bib
+++ b/doc/yade-articles.bib
@@ -366,7 +366,7 @@
 	author = {Puckett, J.G. and Lechenault, F. and Daniels, K.E.},
 	journal = {Physical Review E},
 	volume = {83},
-	issue = {4},
+	number = {4},
 	pages = {041301},
 	year = {2011},
 	doi = {10.1103/PhysRevE.83.041301},
@@ -595,7 +595,7 @@
 	author = {Hilton, J. E. and Tordesillas, A.},
 	journal = {Phys. Rev. E},
 	volume = {88},
-	issue = {6},
+	number = {6},
 	pages = {062203},
 	numpages = {8},
 	year = {2013},
