--- a/doc/yade-conferences.bib
+++ b/doc/yade-conferences.bib
@@ -521,7 +521,7 @@
 	url = {https://www.yade-dem.org/publi/APC000193.pdf}
 }
 
-@InProceedings{ Hilton2013,
+@InProceedings{ Hilton2013b,
 	author = {J. E. Hilton and P. W. Cleary and A. Tordesillas},
 	title = {Unitary stick-slip motion in granular beds},
 	publisher = {AIP},
