Implement experimental SPH-model
Basic implementation of smoothed particles hydrodynamics

Squashed commit of the following:

commit 2e49d31e1f10c6d18636dc0de9295e7107592a89
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Fri Apr 4 10:58:11 2014 +0200

    Add SPH-example (experimental).

commit 628ff6f9f2bdf130b0e69e5f791d76a8e881bf13
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Fri Apr 4 10:14:41 2014 +0200

    Add experimental comment on SPH.

commit 35cc070c4bc21917096f46aa92880e6c070924a3
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Fri Apr 4 10:10:56 2014 +0200

    Move force SPH calculations into the separate function.

commit 330ccb3f96fa0e9da89c1fb0861b917a356e823c
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Thu Apr 3 20:05:54 2014 +0200

    Fix forces calculation.

commit fad16b5beddf3390633aaf8cefa92f4b40062127
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Thu Apr 3 15:32:02 2014 +0200

    Re-enable SPH-functions.

commit 8829b10bcdda2ddeec7e2c869694639c4f33af42
Merge: 0cc1f70 c00c469
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Thu Apr 3 13:55:11 2014 +0200

    Merge branch 'master' into SPH

commit 0cc1f700c93ed389fef49e2388a03500ea1e495e
Merge: d06a92f fccbe5d
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Thu Apr 3 10:51:00 2014 +0200

    Merge with master.

commit d06a92fca289cbafb36076662c8d753d6e2a0c4d
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Fri Mar 7 13:55:48 2014 +0100

    Minor fix.

commit 7281ddf414486b72dd1320c7adc424467d10daed
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Thu Mar 6 09:43:28 2014 +0100

    Fix calculation.

commit 8a101259776a07aae32763feab3274f239ccf38d
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Wed Mar 5 10:35:51 2014 +0100

    Fix calculation of rho.

commit b215b6a2ed0172edba4266a5d303d3014339c4d2
Author: Anton Gladky <gladky.anton@gmail.com>
Date:   Tue Mar 4 17:16:21 2014 +0100

    Fix smoothkernels .

commit f34b8bbe575

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -668,6 +668,22 @@ Thanks.
 	publisher={ACS Publications}
 }
 
+@inproceedings{Mueller2003,
+	author = {M\"{u}ller, Matthias and Charypar, David and Gross, Markus},
+	title = {Particle-based Fluid Simulation for Interactive Applications},
+	booktitle = {Proceedings of the 2003 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+	series = {SCA '03},
+	year = {2003},
+	isbn = {1-58113-659-5},
+	location = {San Diego, California},
+	pages = {154--159},
+	numpages = {6},
+	url = {http://dl.acm.org/citation.cfm?id=846276.846298},
+	acmid = {846298},
+	publisher = {Eurographics Association},
+	address = {Aire-la-Ville, Switzerland, Switzerland},
+} 
+
 @article {Soulie2006,
 	author = {Soulié, F. and Cherblanc, F. and El Youssoufi, M.S. and Saix, C.},
 	title = {Influence of liquid bridges on the mechanical behaviour of polydisperse granular materials},
