Update date in Changelog.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 ==================================================
 yade-1.09.0
-
+Sun, 18 May 2014 17:32:07 +0200
 
 Alexander Eulitz (1):
       corrected a little bug in description of yadedaily-installation and added example and folder structure for compilation
