--- a/doc/yade-conferences.bib
+++ b/doc/yade-conferences.bib
@@ -611,3 +611,23 @@
 	document_type={Conference Paper},
 	source={Scopus},
 }
+
+@InProceedings{Yuan2014,
+	author={Chao Yuan and Bruno Chareyre and Félix Darve},
+	title={Pore-Scale Simulations of Drainage for Two-phase Flow in Dense Sphere Packings},
+	journal={XX . International Conference on Computational Methods in Water Resources},
+	year={2014},
+	pages={232},
+	url={http://cmwr14.de/images/bookofabstracts/CMWR14BookofAbstracts.pdf}
+}
+
+@InProceedings{Sweijen2014,
+	author={Thomas Sweijen and Majid Hassanizadeh and Bruno Chareyre},
+	title={Pore-Scale modeling of swelling porous media; application to super absorbent polymers},
+	journal={XX . International Conference on Computational Methods in Water Resources},
+	year={2014},
+	pages={227},
+	url={http://cmwr14.de/images/bookofabstracts/CMWR14BookofAbstracts.pdf}
+}
+
+
